[gd_scene load_steps=4 format=3 uid="uid://c1f46dcefeiai"]

[ext_resource type="PackedScene" uid="uid://bppygedro8q38" path="res://Bird.tscn" id="1_whpyg"]
[ext_resource type="PackedScene" uid="uid://bl2kgdf0778t8" path="res://Tubos.tscn" id="2_8pkoa"]
[ext_resource type="Script" path="res://HUD.gd" id="3_clijs"]

[node name="World" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_whpyg")]
position = Vector2(75, 347)

[node name="Tubos" parent="." instance=ExtResource("2_8pkoa")]

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("3_clijs")

[node name="Score Label" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -60.0
offset_right = 43.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/CenterContainer"]
layout_mode = 2

[node name="Game Over" type="Label" parent="HUD/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1

[node name="End Score Label" type="Label" parent="HUD/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="Restart Button" type="Button" parent="HUD/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Exit Button" type="Button" parent="HUD/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="game_over" from="Player" to="HUD" method="_on_player_game_over"]
[connection signal="game_over" from="Tubos" to="HUD" method="_on_tubos_game_over"]
[connection signal="update_score" from="Tubos" to="HUD" method="_on_tubos_update_score"]
[connection signal="button_up" from="HUD/CenterContainer/VBoxContainer/Restart Button" to="HUD" method="_on_restart_button_button_up"]
[connection signal="button_up" from="HUD/CenterContainer/VBoxContainer/Exit Button" to="HUD" method="_on_exit_button_button_up"]
